# ThreatWeaver

./: .env.example  .gitignore  CONTRIBUTING.md  GITHUB_ISSUES_ROADMAP.md  GITHUB_SETUP_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  ISSUE_13_COMPLETE_SUMMARY.md  ISSUE_13_IMPLEMENTATION_PLAN.md  ISSUE_13_PROGRESS.md  ISSUE_13_TESTING_PLAN.md  ISSUE_EXECUTION_ORDER.md  LICENSE  NEXT_STEPS_ANALYSIS.md  PHASE_0_COMPLETE.md  README.md  REPO_SETUP_COMPLETE.md  architecture.md  docker-compose.yml
backend/: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  demo.sh  demo_httpx.py  demo_nmap.py  demo_recon_coordinator.py  demo_subfinder.py  docker-compose.tools.yml  langgraph.json  langgraph_assessment.py  langgraph_graph.py  pyproject.toml  run_demo.sh  run_sandbox_demo.py  test_auth.py  test_db.py  test_gcs.py  test_user_profile.py  view_results.py
backend/alembic/: env.py
backend/alembic/versions/: 47a6162954a1_initial_schema_with_user_team_scan_.py  8ee58047374e_add_security_events_table_for_prompt_.py  9c15d24eda91_add_approval_requests_table.py
backend/docker/: Dockerfile.httpx  Dockerfile.nmap  Dockerfile.nuclei  Dockerfile.sqlmap  Dockerfile.subfinder
backend/docs/: APPROVAL_SYSTEM.md  DATABASE_SCHEMA.md  LLM_ABSTRACTION.md  LLM_QUICK_REFERENCE.md  SANDBOX_SYSTEM.md
backend/examples/: approval_demo.py  llm_basic_usage.py  prompt_guard_demo.py  sandbox_demo.py
backend/scripts/: run_sandbox_demo.sh  test_sandbox.sh
backend/src/: __init__.py  main.py
backend/src/agents/: __init__.py  agent_factory.py  assessment_coordinator.py  context.py  recon_coordinator.py
backend/src/config/: __init__.py  logging.py  nexus_config.py  settings.py
backend/src/db/: __init__.py  base.py  crud.py  session.py
backend/tests/: test_approvals.py  test_assessment_coordinator.py  test_ffuf_agent.py  test_handoffs.py  test_httpx_agent.py  test_llm.py  test_nmap_agent.py  test_nuclei_agent.py  test_prompt_guard.py  test_sandbox.py  test_sqlmap_agent.py  test_subfinder_agent.py  test_testssl_agent.py  test_wafw00f_agent.py  test_xsstrike_agent.py
(+85 files in other folders)
